# asr-transcribe-inference-offline

./: .gitignore  Dockerfile  faster_whisper_large.py  main.py  pyproject.toml  requirements-common.txt  requirements-cuda.txt  requirements.txt  whisper_th_small.py
src/asr_transcribe_inference_offline/: faster_whisper_large.py  main.py  vllm_whisper.py  whisper_th_small.py
src/transcribe_vllm/: main.py
