[tool.poetry]
name = "asr-transcribe-inference-offline"
version = "0.1.0"
description = ""
authors = ["nuza555xx <nuchaiwongthon@gmail.com>"]
readme = "README.md"
packages = [{ include = "asr_transcribe_inference_offline", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
annotated-types = "0.7.0"
anyio = "4.9.0"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
click = "8.1.8"
colorama = "0.4.6"
fastapi = "0.115.12"
filelock = "3.18.0"
fsspec = "2025.3.0"
h11 = "0.14.0"
huggingface-hub = "0.32.0"
idna = "3.10"
jinja2 = "3.1.6"
markupsafe = "3.0.2"
mpmath = "1.3.0"
networkx = "3.4.2"
numpy = "2.2.4"
packaging = "24.2"
pydantic = "2.11.1"
pydantic-core = "2.33.0"
pydub = "0.25.1"
python-multipart = "0.0.20"
pyyaml = "6.0.2"
regex = "2024.11.6"
requests = "2.32.3"
safetensors = "0.5.3"
setuptools = "78.1.0"
sniffio = "1.3.1"
starlette = "0.46.1"
sympy = "1.13.3"
tokenizers = "0.21.1"
torch = "2.7.0"
tqdm = "4.67.1"
transformers = "4.53.1"
typing-inspection = "0.4.0"
typing-extensions = "4.13.0"
urllib3 = "2.3.0"
uvicorn = "0.34.0"
vllm = "^0.9.1"
faster-whisper = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
