[project]
name = "transcribe-vllm"
version = "0.1.0"
description = ""
authors = [
    {name = "nuza555xx",email = "nuchaiwongthon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.0,<3.13"
dependencies = [
    "librosa (==0.11.0)",
    "vllm (==0.8.5)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.12.13)",
    "aiosignal (==1.4.0)",
    "airportsdata (==20250706)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "astor (==0.8.1)",
    "attrs (==25.3.0)",
    "audioread (==3.0.1)",
    "blake3 (==1.0.5)",
    "cachetools (==6.1.0)",
    "certifi (==2025.6.15)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "click (==8.2.1)",
    "cloudpickle (==3.1.1)",
    "colorama (==0.4.6)",
    "compressed-tensors (==0.9.3)",
    "cupy-cuda12x (==13.4.1)",
    "decorator (==5.2.1)",
    "deprecated (==1.2.18)",
    "depyf (==0.18.0)",
    "dill (==0.4.0)",
    "diskcache (==5.6.3)",
    "distro (==1.9.0)",
    "dnspython (==2.7.0)",
    "einops (==0.8.1)",
    "email-validator (==2.2.0)",
    "fastapi (==0.116.0)",
    "fastapi-cli (==0.0.8)",
    "fastapi-cloud-cli (==0.1.1)",
    "fastrlock (==0.8.3)",
    "filelock (==3.18.0)",
    "frozenlist (==1.7.0)",
    "fsspec (==2025.5.1)",
    "gguf (==0.17.1)",
    "googleapis-common-protos (==1.70.0)",
    "grpcio (==1.73.1)",
    "h11 (==0.16.0)",
    "hf-xet (==1.1.5)",
    "httpcore (==1.0.9)",
    "httptools (==0.6.4)",
    "httpx (==0.27.2)",
    "huggingface-hub (==0.33.2)",
    "idna (==3.10)",
    "importlib-metadata (==8.0.0)",
    "interegular (==0.3.3)",
    "jinja2 (==3.1.6)",
    "jiter (==0.10.0)",
    "joblib (==1.5.1)",
    "jsonschema (==4.24.0)",
    "jsonschema-specifications (==2025.4.1)",
    "lark (==1.2.2)",
    "lazy-loader (==0.4)",
    "llvmlite (==0.44.0)",
    "lm-format-enforcer (==0.10.11)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==3.0.2)",
    "mdurl (==0.1.2)",
    "mistral-common (==1.6.3)",
    "mpmath (==1.3.0)",
    "msgpack (==1.1.1)",
    "msgspec (==0.19.0)",
    "multidict (==6.6.3)",
    "nest-asyncio (==1.6.0)",
    "networkx (==3.5)",
    "ninja (==1.11.1.4)",
    "numba (==0.61.2)",
    "numpy (==2.2.6)",
    "openai (==1.93.1)",
    "opencv-python-headless (==4.12.0.88)",
    "opentelemetry-api (==1.26.0)",
    "opentelemetry-exporter-otlp (==1.26.0)",
    "opentelemetry-exporter-otlp-proto-common (==1.26.0)",
    "opentelemetry-exporter-otlp-proto-grpc (==1.26.0)",
    "opentelemetry-exporter-otlp-proto-http (==1.26.0)",
    "opentelemetry-proto (==1.26.0)",
    "opentelemetry-sdk (==1.26.0)",
    "opentelemetry-semantic-conventions (==0.47b0)",
    "opentelemetry-semantic-conventions-ai (==0.4.10)",
    "outlines (==0.1.11)",
    "outlines-core (==0.1.26)",
    "packaging (==25.0)",
    "partial-json-parser (==0.2.1.1.post6)",
    "pillow (==11.3.0)",
    "platformdirs (==4.3.8)",
    "pooch (==1.8.2)",
    "prometheus-fastapi-instrumentator (==7.1.0)",
    "prometheus-client (==0.22.1)",
    "propcache (==0.3.2)",
    "protobuf (==4.25.8)",
    "psutil (==7.0.0)",
    "py-cpuinfo (==9.0.0)",
    "pycountry (==24.6.1)",
    "pycparser (==2.22)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.2)",
    "python-dotenv (==1.1.1)",
    "python-json-logger (==3.3.0)",
    "python-multipart (==0.0.20)",
    "pyyaml (==6.0.2)",
    "pyzmq (==27.0.0)",
    "ray (==2.47.1)",
    "referencing (==0.36.2)",
    "regex (==2024.11.6)",
    "requests (==2.32.4)",
    "rich (==14.0.0)",
    "rich-toolkit (==0.14.8)",
    "rignore (==0.5.1)",
    "rpds-py (==0.26.0)",
    "safetensors (==0.5.3)",
    "scikit-learn (==1.7.0)",
    "scipy (==1.16.0)",
    "sentencepiece (==0.2.0)",
    "sentry-sdk (==2.32.0)",
    "setuptools (==80.9.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "soundfile (==0.13.1)",
    "soxr (==0.5.0.post1)",
    "starlette (==0.46.2)",
    "sympy (==1.13.1)",
    "threadpoolctl (==3.6.0)",
    "tiktoken (==0.9.0)",
    "tokenizers (==0.21.2)",
    "torch (==2.6.0)",
    "torchaudio (==2.6.0)",
    "torchvision (==0.21.0)",
    "tqdm (==4.67.1)",
    "transformers (==4.53.1)",
    "typer (==0.16.0)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "urllib3 (==2.5.0)",
    "uvicorn (==0.35.0)",
    "watchfiles (==1.1.0)",
    "websockets (==15.0.1)",
    "wrapt (==1.17.2)",
    "yarl (==1.20.1)",
    "zipp (==3.23.0)"
]

[tool.poetry]
packages = [{include = "transcribe_vllm", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
